[package]
name = "ronly"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = [
  "mount",
  "sched",
  "signal",
  "process",
  "fs",
] }
seccompiler = "0.5"
